Fix text overflow on custom links

--- a/src/components/CustomCollection/CustomCollection.module.scss
+++ b/src/components/CustomCollection/CustomCollection.module.scss
@@ -42,6 +42,14 @@
     width: 18px;
     height: 18px;
     margin-right: units(1);
+    flex-shrink: 0;
+  }
+
+  .customLinkText {
+    // truncated text
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
